remove never used items

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,4 @@
 {
   "env": {"browser": true,"node":true, "es6": true},
-  "extends": ["eslint:recommended","next", "next/core-web-vitals"],
-  "rules": {
-    "react/no-unescaped-entities": "off",
-    "@next/next/no-page-custom-font": "off"
-  }
+  "extends": ["eslint:recommended","next", "next/core-web-vitals"]
 }
